added starting page structure and style

--- a/index.html
+++ b/index.html
@@ -8,6 +8,22 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
+    <header>
+        <h2 id="highscorelink" class="purple-text">View high scores</h2>
+        <h2 id="timer">Time: 0</h2>
+    </header>
+    <main>
+        <div id="main-content">
+            <h1>Coding Quiz Challenge</h1>
+            <p>
+                Try to answer the following code-related questions within the time limit.
+            </p>
+            <p>
+                Keep in mind that incorrect answers will penalize your score/time by ten seconds!
+            </p>
+            <button id="start-quiz" class="main-button">Start Quiz</button>
+        </div>
+    </main>
     <script src="./assets/js/script.js"></script>
 </body>
 </html>
