--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h2 id="highscorelink" class="purple-text">View high scores</h2>
         <h2 id="timer">Time: 0</h2>
     </header>
-    <main>
+    <main id="main-content">
         <!-- The main handling of changing the html is done by having predefined div elements for each of the types of page. -->
         <!-- The divs are cleared of content when they are not supposed to be visible, and their data-state is changed to hidden. -->
         <!-- The content of the divs is re-added when they are supposed to become visible -->
@@ -24,7 +24,7 @@
             <p>
                 Keep in mind that incorrect answers will penalize your score/time by ten seconds!
             </p>
-            <button id="start-quiz" class="main-button">Start Quiz</button>
+            <button class="main-button start-quiz-button">Start Quiz</button>
         </div>
         <div id="quiz-question" data-state="hidden"></div>
         <div id="end-quiz-page" data-state="hidden"></div>
