update quiz timer when question answered incorrectly

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </header>
     <main id="main-content">
         <!-- The main handling of changing the html is done by having predefined div elements for each of the types of page. -->
-        <!-- The divs are cleared of content when they are not supposed to be visible, and their data-state is changed to hidden. -->
+        <!-- The divs are cleared of content when they are not supposed to be visible -->
         <!-- The content of the divs is re-added when they are supposed to become visible -->
         <div id="start-page">
             <h1>Coding Quiz Challenge</h1>
