started end screen plus fixed a timer bug

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             </p>
             <button class="main-button start-quiz-button">Start Quiz</button>
         </div>
+
         <div id="quiz-question" class="centered" style="display:none">
             <h1 id="question-prompt">Placeholder</h1>
             <div class="quiz-choices-div">
@@ -38,7 +39,12 @@
                 <button class="main-button" data-button-id="4">Choice 4</button>
             </div>
         </div>
-        <div id="end-quiz-page" style="display:none"></div>
+
+        <div id="end-quiz-page" style="display:none">
+            <h1>All done!</h1>
+            <p id="final-score-message"></p>
+            <p></p>
+        </div>
         <div id="high-score-page" style="display:none"></div>
         <div id="correct-wrong-info" class="centered" style="display:none"></div>
     </main>
