--- a/index.html
+++ b/index.html
@@ -43,20 +43,30 @@
         <div id="end-quiz-page" style="display:none" class="centered">
             <h1>All done!</h1>
             <p id="final-score-message"></p>
-            <form id="initials-form">
-                <div>
+            <form id="initials-form" class="display-flex">
+                <div class="margin-20">
                     <p>Enter initials:</p>
                 </div>
                 
-                <div>
+                <div class="margin-20">
                     <input type="text" name="initials" />
                 </div>
-                <div>
+                <div class="margin-20">
                     <button class="main-button" id="save-initials" type="submit">Submit</button>
                 </div>
             </form>
         </div>
-        <div id="high-score-page" style="display:none"></div>
+
+        <div id="high-score-page" style="display:none" class="centered">
+            <h1>High scores</h1>
+            <table id="high-score-table">
+            </table>
+            <div class="display-flex">
+                <button class="main-button margin-20" id="back-to-start">Go back</button>
+                <button class="main-button margin-20" id="clear-scores">Clear high scores</button>
+            </div>
+        </div>
+        
         <div id="correct-wrong-info" class="centered" style="display:none"></div>
     </main>
     <script src="./assets/js/script.js"></script>
