added highscores table and button functionality, found bug in replaying quiz

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
         <div id="quiz-question" class="centered" style="display:none">
             <h1 id="question-prompt">Placeholder</h1>
             <div class="quiz-choices-div">
-                <button class="main-button" data-button-id="1">Choice 1</button>
-                <button class="main-button" data-button-id="2">Choice 2</button>
-                <button class="main-button" data-button-id="3">Choice 3</button>
-                <button class="main-button" data-button-id="4">Choice 4</button>
+                <button class="main-button quiz-button" data-button-id="1">Choice 1</button>
+                <button class="main-button quiz-button" data-button-id="2">Choice 2</button>
+                <button class="main-button quiz-button" data-button-id="3">Choice 3</button>
+                <button class="main-button quiz-button" data-button-id="4">Choice 4</button>
             </div>
         </div>
 
@@ -63,7 +63,7 @@
             </table>
             <div class="display-flex">
                 <button class="main-button margin-20" id="back-to-start">Go back</button>
-                <button class="main-button margin-20" id="clear-scores">Clear high scores</button>
+                <button class="main-button margin-20" id="clear-high-scores">Clear high scores</button>
             </div>
         </div>
         
