fixed styles for initials form

--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
             <h1>All done!</h1>
             <p id="final-score-message"></p>
             <form id="initials-form" class="display-flex">
-                <div class="margin-20">
+                <div>
                     <p>Enter initials:</p>
                 </div>
                 
-                <div class="margin-20">
+                <div>
                     <input type="text" name="initials" />
                 </div>
-                <div class="margin-20">
+                <div>
                     <button class="main-button" id="save-initials" type="submit">Submit</button>
                 </div>
             </form>
